@@ -5,6 +5,10 @@ FlexCat Open Source - Changelog
 $Id$
 $Source$
 
+2006-12-25  David Rey <tactica@users.sourceforge.net>
+
+    * createcat.h: now always generates 4-digit years
+
 2006-12-24  David Rey <tactica@users.sourceforge.net>
 
     * in: removed, no use for it
